// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages managePassengerGroup should render correctly after errors are made and page rerenders 1`] = `
<TwoThirdsLayout
  description="Manage Passenger Group page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Minimum amount cannot be greater than 4",
        "id": "minimum-passengers-Regular Senior",
        "userInput": "5",
      },
      Object {
        "errorMessage": "Maximum amount is required",
        "id": "minimum-passengers-Regular Senior",
      },
      Object {
        "errorMessage": "Enter a group name of up to 50 characters",
        "id": "passenger-group-name",
        "userInput": "",
      },
    ]
  }
  title="Manage Passenger Group - Create Fares Data Service"
>
  <CsrfForm
    action="/api/managePassengerGroup"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Minimum amount cannot be greater than 4",
            "id": "minimum-passengers-Regular Senior",
            "userInput": "5",
          },
          Object {
            "errorMessage": "Maximum amount is required",
            "id": "minimum-passengers-Regular Senior",
          },
          Object {
            "errorMessage": "Enter a group name of up to 50 characters",
            "id": "passenger-group-name",
            "userInput": "",
          },
        ]
      }
    />
    <input
      name="groupId"
      type="hidden"
      value={0}
    />
    <h1
      className="govuk-heading-xl"
      id="group-page-heading"
    >
      Provide passenger group details
    </h1>
    <div
      className="govuk-form-group"
      id="max-group-size-header"
    >
      <label
        htmlFor="max-group-size"
      >
        <h1
          className="govuk-heading-m"
          id="group-size-heading"
        >
          How many passengers can use this ticket at one time?
        </h1>
      </label>
      <p
        className="govuk-hint"
        id="group-size-example"
      >
        We need to know the maximum size of the group of passengers that can use this ticket at one time. Example: Up to 5 passengers at a time would require an input of 5
      </p>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="max-group-size"
        errors={
          Array [
            Object {
              "errorMessage": "Minimum amount cannot be greater than 4",
              "id": "minimum-passengers-Regular Senior",
              "userInput": "5",
            },
            Object {
              "errorMessage": "Maximum amount is required",
              "id": "minimum-passengers-Regular Senior",
            },
            Object {
              "errorMessage": "Enter a group name of up to 50 characters",
              "id": "passenger-group-name",
              "userInput": "",
            },
          ]
        }
      >
        <input
          className="govuk-input govuk-input--width-2"
          defaultValue="4"
          id="max-group-size"
          name="maxGroupSize"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <div
      className="govuk-form-group"
    >
      <fieldset
        aria-describedby="passenger-type-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--m"
        >
          <h1
            className="govuk-fieldset__heading"
            id="passenger-type-page-heading"
          >
            Which type of passengers can use this ticket?
          </h1>
        </legend>
        <span
          className="govuk-hint"
          id="passenger-type-hint"
        >
          Select the passenger types included in your group ticket.
        </span>
        <FormElementWrapper
          errorClass="govuk-checkboxes--error"
          errorId="passenger-type-0"
          errors={
            Array [
              Object {
                "errorMessage": "Minimum amount cannot be greater than 4",
                "id": "minimum-passengers-Regular Senior",
                "userInput": "5",
              },
              Object {
                "errorMessage": "Maximum amount is required",
                "id": "minimum-passengers-Regular Senior",
              },
              Object {
                "errorMessage": "Enter a group name of up to 50 characters",
                "id": "passenger-group-name",
                "userInput": "",
              },
            ]
          }
        >
          <div
            className="govuk-checkboxes"
            data-module="govuk-checkboxes"
          >
            <div
              key="1"
            >
              <div
                className="govuk-checkboxes__item"
                key="1"
              >
                <input
                  className="govuk-checkboxes__input"
                  data-aria-controls="conditional-input-0"
                  defaultChecked={false}
                  id="passenger-type-0"
                  name="passengerTypes"
                  type="checkbox"
                  value={1}
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="passenger-type-0"
                >
                  Regular Senior
                </label>
              </div>
              <div
                className="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                id="conditional-input-0"
              >
                <label
                  htmlFor="maximum-passengers-Regular Senior"
                >
                  <h1
                    className="govuk-heading-s"
                    id="individual-limit-heading"
                  >
                    We need to know how many passengers can use this at one time
                  </h1>
                </label>
                <div
                  className="govuk-form-group"
                >
                  <label
                    className="govuk-label"
                    htmlFor="minimum-passengers-Regular Senior"
                  >
                    Minimum (optional)
                  </label>
                  <input
                    className="govuk-input govuk-!-width-one-third"
                    data-test-id="minimum-passengers"
                    defaultValue=""
                    id="minimum-passengers-1"
                    name="minimumPassengers1"
                  />
                </div>
                <div
                  className="govuk-form-group"
                >
                  <label
                    className="govuk-label"
                    htmlFor="maximum-passengers-Regular Senior"
                  >
                    Maximum (required)
                  </label>
                  <input
                    className="govuk-input govuk-!-width-one-third"
                    data-test-id="maximum-passengers"
                    defaultValue=""
                    id="maximum-passengers-1"
                    name="maximumPassengers1"
                  />
                </div>
              </div>
              <input
                name="passengerType1"
                type="hidden"
                value="Regular Senior"
              />
            </div>
            <div
              key="2"
            >
              <div
                className="govuk-checkboxes__item"
                key="2"
              >
                <input
                  className="govuk-checkboxes__input"
                  data-aria-controls="conditional-input-1"
                  defaultChecked={false}
                  id="passenger-type-1"
                  name="passengerTypes"
                  type="checkbox"
                  value={2}
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="passenger-type-1"
                >
                  Regular infant
                </label>
              </div>
              <div
                className="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                id="conditional-input-1"
              >
                <label
                  htmlFor="maximum-passengers-Regular infant"
                >
                  <h1
                    className="govuk-heading-s"
                    id="individual-limit-heading"
                  >
                    We need to know how many passengers can use this at one time
                  </h1>
                </label>
                <div
                  className="govuk-form-group"
                >
                  <label
                    className="govuk-label"
                    htmlFor="minimum-passengers-Regular infant"
                  >
                    Minimum (optional)
                  </label>
                  <input
                    className="govuk-input govuk-!-width-one-third"
                    data-test-id="minimum-passengers"
                    defaultValue=""
                    id="minimum-passengers-2"
                    name="minimumPassengers2"
                  />
                </div>
                <div
                  className="govuk-form-group"
                >
                  <label
                    className="govuk-label"
                    htmlFor="maximum-passengers-Regular infant"
                  >
                    Maximum (required)
                  </label>
                  <input
                    className="govuk-input govuk-!-width-one-third"
                    data-test-id="maximum-passengers"
                    defaultValue=""
                    id="maximum-passengers-2"
                    name="maximumPassengers2"
                  />
                </div>
              </div>
              <input
                name="passengerType2"
                type="hidden"
                value="Regular infant"
              />
            </div>
          </div>
        </FormElementWrapper>
      </fieldset>
    </div>
    <div
      className="govuk-form-group govuk-form-group--error"
      id="passenger-group-name"
    >
      <label
        htmlFor="passenger-group-name"
      >
        <h1
          className="govuk-heading-m"
          id="passenger-group-name-heading"
        >
          Provide a name for your group
        </h1>
      </label>
      <p
        className="govuk-hint"
        id="group-name-hint"
      >
        50 characters maximum
      </p>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="passenger-group-name"
        errors={
          Array [
            Object {
              "errorMessage": "Minimum amount cannot be greater than 4",
              "id": "minimum-passengers-Regular Senior",
              "userInput": "5",
            },
            Object {
              "errorMessage": "Maximum amount is required",
              "id": "minimum-passengers-Regular Senior",
            },
            Object {
              "errorMessage": "Enter a group name of up to 50 characters",
              "id": "passenger-group-name",
              "userInput": "",
            },
          ]
        }
      >
        <input
          className="govuk-input govuk-input--width-30 govuk-product-name-input__inner__input"
          defaultValue=""
          id="passenger-group-name"
          maxLength={50}
          name="passengerGroupName"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Add passenger group"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages managePassengerGroup should render correctly in edit mode 1`] = `
<TwoThirdsLayout
  description="Manage Passenger Group page of the Create Fares Data Service"
  errors={Array []}
  title="Manage Passenger Group - Create Fares Data Service"
>
  <CsrfForm
    action="/api/managePassengerGroup"
    csrfToken=""
    method="post"
  >
    <InformationSummary
      informationText="Editing and saving new changes will be applied to all fares using this passenger group."
    />
    <ErrorSummary
      errors={Array []}
    />
    <input
      name="groupId"
      type="hidden"
      value={5}
    />
    <h1
      className="govuk-heading-xl"
      id="group-page-heading"
    >
      Provide passenger group details
    </h1>
    <div
      className="govuk-form-group"
      id="max-group-size-header"
    >
      <label
        htmlFor="max-group-size"
      >
        <h1
          className="govuk-heading-m"
          id="group-size-heading"
        >
          How many passengers can use this ticket at one time?
        </h1>
      </label>
      <p
        className="govuk-hint"
        id="group-size-example"
      >
        We need to know the maximum size of the group of passengers that can use this ticket at one time. Example: Up to 5 passengers at a time would require an input of 5
      </p>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="max-group-size"
        errors={Array []}
      >
        <input
          className="govuk-input govuk-input--width-2"
          defaultValue="4"
          id="max-group-size"
          name="maxGroupSize"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <div
      className="govuk-form-group"
    >
      <fieldset
        aria-describedby="passenger-type-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--m"
        >
          <h1
            className="govuk-fieldset__heading"
            id="passenger-type-page-heading"
          >
            Which type of passengers can use this ticket?
          </h1>
        </legend>
        <span
          className="govuk-hint"
          id="passenger-type-hint"
        >
          Select the passenger types included in your group ticket.
        </span>
        <FormElementWrapper
          errorClass="govuk-checkboxes--error"
          errorId="passenger-type-0"
          errors={Array []}
        >
          <div
            className="govuk-checkboxes"
            data-module="govuk-checkboxes"
          >
            <div
              key="1"
            >
              <div
                className="govuk-checkboxes__item"
                key="1"
              >
                <input
                  className="govuk-checkboxes__input"
                  data-aria-controls="conditional-input-0"
                  defaultChecked={false}
                  id="passenger-type-0"
                  name="passengerTypes"
                  type="checkbox"
                  value={1}
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="passenger-type-0"
                >
                  Regular Senior
                </label>
              </div>
              <div
                className="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                id="conditional-input-0"
              >
                <label
                  htmlFor="maximum-passengers-Regular Senior"
                >
                  <h1
                    className="govuk-heading-s"
                    id="individual-limit-heading"
                  >
                    We need to know how many passengers can use this at one time
                  </h1>
                </label>
                <div
                  className="govuk-form-group"
                >
                  <label
                    className="govuk-label"
                    htmlFor="minimum-passengers-Regular Senior"
                  >
                    Minimum (optional)
                  </label>
                  <input
                    className="govuk-input govuk-!-width-one-third"
                    data-test-id="minimum-passengers"
                    defaultValue=""
                    id="minimum-passengers-1"
                    name="minimumPassengers1"
                  />
                </div>
                <div
                  className="govuk-form-group"
                >
                  <label
                    className="govuk-label"
                    htmlFor="maximum-passengers-Regular Senior"
                  >
                    Maximum (required)
                  </label>
                  <input
                    className="govuk-input govuk-!-width-one-third"
                    data-test-id="maximum-passengers"
                    defaultValue=""
                    id="maximum-passengers-1"
                    name="maximumPassengers1"
                  />
                </div>
              </div>
              <input
                name="passengerType1"
                type="hidden"
                value="Regular Senior"
              />
            </div>
            <div
              key="2"
            >
              <div
                className="govuk-checkboxes__item"
                key="2"
              >
                <input
                  className="govuk-checkboxes__input"
                  data-aria-controls="conditional-input-1"
                  defaultChecked={false}
                  id="passenger-type-1"
                  name="passengerTypes"
                  type="checkbox"
                  value={2}
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="passenger-type-1"
                >
                  Regular infant
                </label>
              </div>
              <div
                className="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                id="conditional-input-1"
              >
                <label
                  htmlFor="maximum-passengers-Regular infant"
                >
                  <h1
                    className="govuk-heading-s"
                    id="individual-limit-heading"
                  >
                    We need to know how many passengers can use this at one time
                  </h1>
                </label>
                <div
                  className="govuk-form-group"
                >
                  <label
                    className="govuk-label"
                    htmlFor="minimum-passengers-Regular infant"
                  >
                    Minimum (optional)
                  </label>
                  <input
                    className="govuk-input govuk-!-width-one-third"
                    data-test-id="minimum-passengers"
                    defaultValue=""
                    id="minimum-passengers-2"
                    name="minimumPassengers2"
                  />
                </div>
                <div
                  className="govuk-form-group"
                >
                  <label
                    className="govuk-label"
                    htmlFor="maximum-passengers-Regular infant"
                  >
                    Maximum (required)
                  </label>
                  <input
                    className="govuk-input govuk-!-width-one-third"
                    data-test-id="maximum-passengers"
                    defaultValue=""
                    id="maximum-passengers-2"
                    name="maximumPassengers2"
                  />
                </div>
              </div>
              <input
                name="passengerType2"
                type="hidden"
                value="Regular infant"
              />
            </div>
          </div>
        </FormElementWrapper>
      </fieldset>
    </div>
    <div
      className="govuk-form-group"
      id="passenger-group-name"
    >
      <label
        htmlFor="passenger-group-name"
      >
        <h1
          className="govuk-heading-m"
          id="passenger-group-name-heading"
        >
          Provide a name for your group
        </h1>
      </label>
      <p
        className="govuk-hint"
        id="group-name-hint"
      >
        50 characters maximum
      </p>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="passenger-group-name"
        errors={Array []}
      >
        <input
          className="govuk-input govuk-input--width-30 govuk-product-name-input__inner__input"
          defaultValue="the best group"
          id="passenger-group-name"
          maxLength={50}
          name="passengerGroupName"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Update passenger group"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages managePassengerGroup should render correctly in edit mode with errors 1`] = `
<TwoThirdsLayout
  description="Manage Passenger Group page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Minimum amount cannot be greater than 4",
        "id": "minimum-passengers-Regular Senior",
        "userInput": "5",
      },
      Object {
        "errorMessage": "Maximum amount is required",
        "id": "minimum-passengers-Regular Senior",
      },
      Object {
        "errorMessage": "Enter a group name of up to 50 characters",
        "id": "passenger-group-name",
        "userInput": "",
      },
    ]
  }
  title="Manage Passenger Group - Create Fares Data Service"
>
  <CsrfForm
    action="/api/managePassengerGroup"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Minimum amount cannot be greater than 4",
            "id": "minimum-passengers-Regular Senior",
            "userInput": "5",
          },
          Object {
            "errorMessage": "Maximum amount is required",
            "id": "minimum-passengers-Regular Senior",
          },
          Object {
            "errorMessage": "Enter a group name of up to 50 characters",
            "id": "passenger-group-name",
            "userInput": "",
          },
        ]
      }
    />
    <input
      name="groupId"
      type="hidden"
      value={5}
    />
    <h1
      className="govuk-heading-xl"
      id="group-page-heading"
    >
      Provide passenger group details
    </h1>
    <div
      className="govuk-form-group"
      id="max-group-size-header"
    >
      <label
        htmlFor="max-group-size"
      >
        <h1
          className="govuk-heading-m"
          id="group-size-heading"
        >
          How many passengers can use this ticket at one time?
        </h1>
      </label>
      <p
        className="govuk-hint"
        id="group-size-example"
      >
        We need to know the maximum size of the group of passengers that can use this ticket at one time. Example: Up to 5 passengers at a time would require an input of 5
      </p>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="max-group-size"
        errors={
          Array [
            Object {
              "errorMessage": "Minimum amount cannot be greater than 4",
              "id": "minimum-passengers-Regular Senior",
              "userInput": "5",
            },
            Object {
              "errorMessage": "Maximum amount is required",
              "id": "minimum-passengers-Regular Senior",
            },
            Object {
              "errorMessage": "Enter a group name of up to 50 characters",
              "id": "passenger-group-name",
              "userInput": "",
            },
          ]
        }
      >
        <input
          className="govuk-input govuk-input--width-2"
          defaultValue="4"
          id="max-group-size"
          name="maxGroupSize"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <div
      className="govuk-form-group"
    >
      <fieldset
        aria-describedby="passenger-type-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--m"
        >
          <h1
            className="govuk-fieldset__heading"
            id="passenger-type-page-heading"
          >
            Which type of passengers can use this ticket?
          </h1>
        </legend>
        <span
          className="govuk-hint"
          id="passenger-type-hint"
        >
          Select the passenger types included in your group ticket.
        </span>
        <FormElementWrapper
          errorClass="govuk-checkboxes--error"
          errorId="passenger-type-0"
          errors={
            Array [
              Object {
                "errorMessage": "Minimum amount cannot be greater than 4",
                "id": "minimum-passengers-Regular Senior",
                "userInput": "5",
              },
              Object {
                "errorMessage": "Maximum amount is required",
                "id": "minimum-passengers-Regular Senior",
              },
              Object {
                "errorMessage": "Enter a group name of up to 50 characters",
                "id": "passenger-group-name",
                "userInput": "",
              },
            ]
          }
        >
          <div
            className="govuk-checkboxes"
            data-module="govuk-checkboxes"
          >
            <div
              key="1"
            >
              <div
                className="govuk-checkboxes__item"
                key="1"
              >
                <input
                  className="govuk-checkboxes__input"
                  data-aria-controls="conditional-input-0"
                  defaultChecked={false}
                  id="passenger-type-0"
                  name="passengerTypes"
                  type="checkbox"
                  value={1}
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="passenger-type-0"
                >
                  Regular Senior
                </label>
              </div>
              <div
                className="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                id="conditional-input-0"
              >
                <label
                  htmlFor="maximum-passengers-Regular Senior"
                >
                  <h1
                    className="govuk-heading-s"
                    id="individual-limit-heading"
                  >
                    We need to know how many passengers can use this at one time
                  </h1>
                </label>
                <div
                  className="govuk-form-group"
                >
                  <label
                    className="govuk-label"
                    htmlFor="minimum-passengers-Regular Senior"
                  >
                    Minimum (optional)
                  </label>
                  <input
                    className="govuk-input govuk-!-width-one-third"
                    data-test-id="minimum-passengers"
                    defaultValue=""
                    id="minimum-passengers-1"
                    name="minimumPassengers1"
                  />
                </div>
                <div
                  className="govuk-form-group"
                >
                  <label
                    className="govuk-label"
                    htmlFor="maximum-passengers-Regular Senior"
                  >
                    Maximum (required)
                  </label>
                  <input
                    className="govuk-input govuk-!-width-one-third"
                    data-test-id="maximum-passengers"
                    defaultValue=""
                    id="maximum-passengers-1"
                    name="maximumPassengers1"
                  />
                </div>
              </div>
              <input
                name="passengerType1"
                type="hidden"
                value="Regular Senior"
              />
            </div>
            <div
              key="2"
            >
              <div
                className="govuk-checkboxes__item"
                key="2"
              >
                <input
                  className="govuk-checkboxes__input"
                  data-aria-controls="conditional-input-1"
                  defaultChecked={false}
                  id="passenger-type-1"
                  name="passengerTypes"
                  type="checkbox"
                  value={2}
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="passenger-type-1"
                >
                  Regular infant
                </label>
              </div>
              <div
                className="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                id="conditional-input-1"
              >
                <label
                  htmlFor="maximum-passengers-Regular infant"
                >
                  <h1
                    className="govuk-heading-s"
                    id="individual-limit-heading"
                  >
                    We need to know how many passengers can use this at one time
                  </h1>
                </label>
                <div
                  className="govuk-form-group"
                >
                  <label
                    className="govuk-label"
                    htmlFor="minimum-passengers-Regular infant"
                  >
                    Minimum (optional)
                  </label>
                  <input
                    className="govuk-input govuk-!-width-one-third"
                    data-test-id="minimum-passengers"
                    defaultValue=""
                    id="minimum-passengers-2"
                    name="minimumPassengers2"
                  />
                </div>
                <div
                  className="govuk-form-group"
                >
                  <label
                    className="govuk-label"
                    htmlFor="maximum-passengers-Regular infant"
                  >
                    Maximum (required)
                  </label>
                  <input
                    className="govuk-input govuk-!-width-one-third"
                    data-test-id="maximum-passengers"
                    defaultValue=""
                    id="maximum-passengers-2"
                    name="maximumPassengers2"
                  />
                </div>
              </div>
              <input
                name="passengerType2"
                type="hidden"
                value="Regular infant"
              />
            </div>
          </div>
        </FormElementWrapper>
      </fieldset>
    </div>
    <div
      className="govuk-form-group govuk-form-group--error"
      id="passenger-group-name"
    >
      <label
        htmlFor="passenger-group-name"
      >
        <h1
          className="govuk-heading-m"
          id="passenger-group-name-heading"
        >
          Provide a name for your group
        </h1>
      </label>
      <p
        className="govuk-hint"
        id="group-name-hint"
      >
        50 characters maximum
      </p>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="passenger-group-name"
        errors={
          Array [
            Object {
              "errorMessage": "Minimum amount cannot be greater than 4",
              "id": "minimum-passengers-Regular Senior",
              "userInput": "5",
            },
            Object {
              "errorMessage": "Maximum amount is required",
              "id": "minimum-passengers-Regular Senior",
            },
            Object {
              "errorMessage": "Enter a group name of up to 50 characters",
              "id": "passenger-group-name",
              "userInput": "",
            },
          ]
        }
      >
        <input
          className="govuk-input govuk-input--width-30 govuk-product-name-input__inner__input"
          defaultValue="the best group"
          id="passenger-group-name"
          maxLength={50}
          name="passengerGroupName"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Update passenger group"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages managePassengerGroup should render correctly on first opening of page 1`] = `
<TwoThirdsLayout
  description="Manage Passenger Group page of the Create Fares Data Service"
  errors={Array []}
  title="Manage Passenger Group - Create Fares Data Service"
>
  <CsrfForm
    action="/api/managePassengerGroup"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <input
      name="groupId"
      type="hidden"
    />
    <h1
      className="govuk-heading-xl"
      id="group-page-heading"
    >
      Provide passenger group details
    </h1>
    <div
      className="govuk-form-group"
      id="max-group-size-header"
    >
      <label
        htmlFor="max-group-size"
      >
        <h1
          className="govuk-heading-m"
          id="group-size-heading"
        >
          How many passengers can use this ticket at one time?
        </h1>
      </label>
      <p
        className="govuk-hint"
        id="group-size-example"
      >
        We need to know the maximum size of the group of passengers that can use this ticket at one time. Example: Up to 5 passengers at a time would require an input of 5
      </p>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="max-group-size"
        errors={Array []}
      >
        <input
          className="govuk-input govuk-input--width-2"
          defaultValue=""
          id="max-group-size"
          name="maxGroupSize"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <div
      className="govuk-form-group"
    >
      <fieldset
        aria-describedby="passenger-type-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--m"
        >
          <h1
            className="govuk-fieldset__heading"
            id="passenger-type-page-heading"
          >
            Which type of passengers can use this ticket?
          </h1>
        </legend>
        <span
          className="govuk-hint"
          id="passenger-type-hint"
        >
          Select the passenger types included in your group ticket.
        </span>
        <FormElementWrapper
          errorClass="govuk-checkboxes--error"
          errorId="passenger-type-0"
          errors={Array []}
        >
          <div
            className="govuk-checkboxes"
            data-module="govuk-checkboxes"
          >
            <div
              key="1"
            >
              <div
                className="govuk-checkboxes__item"
                key="1"
              >
                <input
                  className="govuk-checkboxes__input"
                  data-aria-controls="conditional-input-0"
                  defaultChecked={false}
                  id="passenger-type-0"
                  name="passengerTypes"
                  type="checkbox"
                  value={1}
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="passenger-type-0"
                >
                  Normal Adult
                </label>
              </div>
              <div
                className="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                id="conditional-input-0"
              >
                <label
                  htmlFor="maximum-passengers-Normal Adult"
                >
                  <h1
                    className="govuk-heading-s"
                    id="individual-limit-heading"
                  >
                    We need to know how many passengers can use this at one time
                  </h1>
                </label>
                <div
                  className="govuk-form-group"
                >
                  <label
                    className="govuk-label"
                    htmlFor="minimum-passengers-Normal Adult"
                  >
                    Minimum (optional)
                  </label>
                  <input
                    className="govuk-input govuk-!-width-one-third"
                    data-test-id="minimum-passengers"
                    defaultValue=""
                    id="minimum-passengers-1"
                    name="minimumPassengers1"
                  />
                </div>
                <div
                  className="govuk-form-group"
                >
                  <label
                    className="govuk-label"
                    htmlFor="maximum-passengers-Normal Adult"
                  >
                    Maximum (required)
                  </label>
                  <input
                    className="govuk-input govuk-!-width-one-third"
                    data-test-id="maximum-passengers"
                    defaultValue=""
                    id="maximum-passengers-1"
                    name="maximumPassengers1"
                  />
                </div>
              </div>
              <input
                name="passengerType1"
                type="hidden"
                value="Normal Adult"
              />
            </div>
            <div
              key="2"
            >
              <div
                className="govuk-checkboxes__item"
                key="2"
              >
                <input
                  className="govuk-checkboxes__input"
                  data-aria-controls="conditional-input-1"
                  defaultChecked={false}
                  id="passenger-type-1"
                  name="passengerTypes"
                  type="checkbox"
                  value={2}
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="passenger-type-1"
                >
                  Normal child
                </label>
              </div>
              <div
                className="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                id="conditional-input-1"
              >
                <label
                  htmlFor="maximum-passengers-Normal child"
                >
                  <h1
                    className="govuk-heading-s"
                    id="individual-limit-heading"
                  >
                    We need to know how many passengers can use this at one time
                  </h1>
                </label>
                <div
                  className="govuk-form-group"
                >
                  <label
                    className="govuk-label"
                    htmlFor="minimum-passengers-Normal child"
                  >
                    Minimum (optional)
                  </label>
                  <input
                    className="govuk-input govuk-!-width-one-third"
                    data-test-id="minimum-passengers"
                    defaultValue=""
                    id="minimum-passengers-2"
                    name="minimumPassengers2"
                  />
                </div>
                <div
                  className="govuk-form-group"
                >
                  <label
                    className="govuk-label"
                    htmlFor="maximum-passengers-Normal child"
                  >
                    Maximum (required)
                  </label>
                  <input
                    className="govuk-input govuk-!-width-one-third"
                    data-test-id="maximum-passengers"
                    defaultValue=""
                    id="maximum-passengers-2"
                    name="maximumPassengers2"
                  />
                </div>
              </div>
              <input
                name="passengerType2"
                type="hidden"
                value="Normal child"
              />
            </div>
          </div>
        </FormElementWrapper>
      </fieldset>
    </div>
    <div
      className="govuk-form-group"
      id="passenger-group-name"
    >
      <label
        htmlFor="passenger-group-name"
      >
        <h1
          className="govuk-heading-m"
          id="passenger-group-name-heading"
        >
          Provide a name for your group
        </h1>
      </label>
      <p
        className="govuk-hint"
        id="group-name-hint"
      >
        50 characters maximum
      </p>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="passenger-group-name"
        errors={Array []}
      >
        <input
          className="govuk-input govuk-input--width-30 govuk-product-name-input__inner__input"
          defaultValue=""
          id="passenger-group-name"
          maxLength={50}
          name="passengerGroupName"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Add passenger group"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;
